[*] 代码优化